Fix off center footer menu

--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -24,5 +24,6 @@ body > footer {
 
     ul {
         list-style: none;
+        padding-left: 0;
     }
 }
